Fixed broken styles

--- a/css/app.css
+++ b/css/app.css
@@ -354,7 +354,6 @@ tr:hover {background-color: #000}
     display: block;
     color: white;
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: capitalize;
     font-weight: 300;
     font-size: 11pt;
 
